force-app/main/default/objects/copado__Filter__c/copado__Filter__c.object-meta.xml
<CustomObject>
    <description>Used to store user-defined filter colletions in JSON format.</description>
    <label>Filter</label>
    <nameField>
        <label>Filter Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Filters</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>