force-app/main/default/objects/copado__Filter__c/fields/copado__Owner__c.field-meta.xml
<CustomField>
    <fullName>copado__Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Filters</relationshipName>
    <type>Lookup</type>
</CustomField>