force-app/main/default/objects/copado__Filter__c/fields/copado__Share_With__c.field-meta.xml
<CustomField>
    <fullName>copado__Share_With__c</fullName>
    <label>Share With</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Me</fullName>
            </value>
            <value>
                <fullName>All</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>